--- a/web/site/public/search.html
+++ b/web/site/public/search.html
@@ -7,11 +7,19 @@
 </head>
 <body>
 
+
 <nav>
   <a href="/site/home">Home</a>
   <a href="/site/search">Search Events</a>
   <a href="/site/groups">Groups</a>
 </nav>
+
+<header>
+   <h1>Search for Events</h1>
+</header>
+
+
+
 
 <div class="search-container">
     <select onchange="showForm(this.value)">
@@ -35,57 +43,7 @@
     <div class="error-message" id="errorMessage"></div>
 </div>
 
-<script>
-
-  function showForm(formType) {
-    var popularForm = document.getElementById("popularForm");
-    var nameForm = document.getElementById("nameForm");
-
-    if (formType === "popular") {
-      popularForm.style.display = "block";
-      nameForm.style.display = "none";
-    } else if (formType === "name") {
-      popularForm.style.display = "none";
-      nameForm.style.display = "block";
-    }
-  }
-
-  function validateForm(formId) {
-
-    var form = document.getElementById(formId);
-
-    var s = parseInt(form.querySelector('input[name="s"]').value);
-    var p = parseInt(form.querySelector('input[name="p"]').value);
-
-    var maxResults = 1000;
-
-    var errorMessage = document.getElementById("errorMessage");
-
-    if(formId == 'nameForm') {
-        var name = form.querySelector('input[name="name"]').value
-        if(!name) {
-            errorMessage.textContent = `No name provided`;
-            errorMessage.style.display = "block";
-            return false
-        }
-    }
-    
-    if(isNaN(s) || s > 200) {
-        errorMessage.textContent = `Invalid values. Maximum number of results per page is 200`;
-        errorMessage.style.display = "block";
-        return false;
-    }
-
-    if (isNaN(s) || isNaN(p) || s * p >= maxResults) {
-      errorMessage.textContent = `Invalid values. Maximum number of results is ${maxResults}`;
-      errorMessage.style.display = "block";
-      return false;
-    }
-
-    errorMessage.style.display = "none";
-    return true;
-  }
-</script>
+<script src="/site/scripts"></script>
 
 </body>
 </html>
