--- a/web/site/public/login.html
+++ b/web/site/public/login.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SECA - Home</title>
+  <title>SECA - Login </title>
   <link rel="stylesheet" type="text/css" href="/site/css"/>
 </head>
-<body>
+
 
 <nav>
     <a href="/site/home">Home</a>
@@ -19,12 +19,14 @@
 </nav>
 
 <header>
-  <h1>Welcome to SECA</h1>
+    <h1>Login</h1>
+    <form method="POST" action="/site/login">
+          <p> Username:<input type="text" name="username"></p>
+          <p>Password: <input type="password" name="password"></p>
+          <input type="submit" value="Log In">
+    </form>
 </header>
 
 <script src="/site/scripts"></script>
-
-
-</body>
 
 </html>
