--- a/web/site/public/register.html
+++ b/web/site/public/register.html
@@ -2,29 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SECA - Home</title>
+  <title>SECA - Register</title>
   <link rel="stylesheet" type="text/css" href="/site/css"/>
 </head>
-<body>
 
 <nav>
     <a href="/site/home">Home</a>
     <a href="/site/search">Search Events</a>
     <a href="/site/groups">Groups</a>
     <a style="display:none" href="/site/login" id="registerLink">Login</a>
-    <a style="display:none" href="/site/register" id= "loginLink">Register</a>
+    <a style="display:none" href="/site/register" id="loginLink">Register</a>
     <form id="logoutForm" style="display:none" action="/site/logout" method="post">
       <button type="submit">Log Out</button>
     </form>
 </nav>
 
 <header>
-  <h1>Welcome to SECA</h1>
+    <h1>Register</h1>
+    <form id="loginForm" method="POST" action="/site/login" onsubmit="return validateLoginForm()">
+        <p>Username: <input type="text" name="username" id="username"></p>
+        <p>Password: <input type="password" name="password" id="password"></p>
+        <p id="errorMessage" style="color: red;"></p>
+        <input type="submit" value="Register">
+    </form>
 </header>
 
 <script src="/site/scripts"></script>
-
-
-</body>
-
 </html>
