--- a/web/site/public/register.html
+++ b/web/site/public/register.html
@@ -19,7 +19,7 @@
 
 <header>
     <h1>Register</h1>
-    <form id="loginForm" method="POST" action="/site/login" onsubmit="return validateLoginForm()">
+    <form id="registerForm" method="POST" action="/site/register" onsubmit="return validateLoginRegisterForm()">
         <p>Username: <input type="text" name="username" id="username"></p>
         <p>Password: <input type="password" name="password" id="password"></p>
         <p id="errorMessage" style="color: red;"></p>
