--- a/web/site/public/login.html
+++ b/web/site/public/login.html
@@ -20,9 +20,10 @@
 
 <header>
     <h1>Login</h1>
-    <form method="POST" action="/site/login">
-          <p> Username:<input type="text" name="username"></p>
-          <p>Password: <input type="password" name="password"></p>
+    <form id="loginForm" method="POST" action="/site/login" onsubmit="return validateLoginRegisterForm()">
+          <p> Username:<input type="text" name="username" id="username"></p>
+          <p>Password: <input type="password" name="password" id="password"></p>
+          <p id="errorMessage" style="color: red;"></p>
           <input type="submit" value="Log In">
     </form>
 </header>
